--- a/src/app/Data/Data.css
+++ b/src/app/Data/Data.css
@@ -1,3 +1,30 @@
-.app__button--xl {
+.app__icon--xl {
   font-size: 36px;
+}
+
+.app__data-list.pf-c-data-list .pf-c-data-list__item-content {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.app__data-list.pf-c-data-list .pf-c-data-list__cell:not(.pf-m-icon):not(.pf-m-no-fill) {
+  flex: 1;
+}
+
+.pf-c-data-list__cell.pf-m-no-fill {
+  flex-grow: 1;
+}
+
+.pf-c-data-list__cell + .pf-c-data-list__cell {
+  flex: 1 !important;
+}
+
+.app__data-list.pf-c-data-list .pf-c-data-list__cell {
+  padding-top: var(--pf-global--spacer--lg);
+}
+
+@media screen and (min-width: 768px) {
+  .pf-c-data-list__cell.pf-m-icon {
+    margin-right: var(--pf-global--spacer--2xl);
+  }
 }
