--- a/src/app/Data/Data.css
+++ b/src/app/Data/Data.css
@@ -1,5 +1,9 @@
 .app__icon--xl {
-  font-size: 36px;
+  font-size: 32px;
+}
+
+.app__icon--md {
+  font-size: 24px;
 }
 
 .app__data-list.pf-c-data-list .pf-c-data-list__item-content {
@@ -11,11 +15,7 @@
   flex: 1;
 }
 
-.pf-c-data-list__cell.pf-m-no-fill {
-  flex-grow: 1;
-}
-
-.pf-c-data-list__cell + .pf-c-data-list__cell {
+.app__data-list.pf-c-data-list .pf-c-data-list__cell + .pf-c-data-list__cell {
   flex: 1 !important;
 }
 
@@ -23,8 +23,22 @@
   padding-top: var(--pf-global--spacer--lg);
 }
 
+.app__data-list-cell--m-label {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.app__data-list.pf-c-data-list .pf-c-data-list__item-action {
+  margin-left: var(--pf-global--spacer--md);
+}
+
 @media screen and (min-width: 768px) {
-  .pf-c-data-list__cell.pf-m-icon {
-    margin-right: var(--pf-global--spacer--2xl);
+  .app__data-list.pf-c-data-list .pf-c-data-list__cell.pf-m-icon {
+    margin-right: var(--pf-global--spacer--2xl) !important;
+  }
+
+  .app__data-list.pf-c-data-list .pf-c-data-list__cell.pf-m-no-fill {
+    flex-grow: 0 !important;
   }
 }
